<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nyork"

    android:orientation="vertical"

    tools:context="com.example.asiagibson.mypath.activities.HomeScreenActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/green"
        android:src="@drawable/path"
        android:text="Hello World!" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:cardBackgroundColor="@color/black_translucent"
        app:cardCornerRadius="30dp"
        app:contentPadding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_activity_text"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/age_spinner"
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorWhite"
                    android:entries="@array/age_array"
                    android:prompt="@string/drop_down_prompt"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp">


                </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/education_status"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/education_spinner"
                    android:layout_width="@dimen/spinner_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorWhite"
                    android:entries="@array/education_array"
                    android:gravity="center"
                    android:prompt="@string/drop_down_prompt">


                </android.support.v7.widget.AppCompatSpinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/citizen"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/yes_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/yes" />

                    <Button
                        android:id="@+id/no_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">


                    <RadioButton
                        android:id="@+id/visa_button"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/visa_button"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp"
                        android:visibility="gone" />

                    <RadioButton
                        android:id="@+id/green_card_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/greenCard_button"
                        android:textColor="@color/colorWhite"
                        android:textSize="20dp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/question_mark_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="@color/colorWhite"
                    android:src="@drawable/question_mark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/question_mark_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp" />
            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/greys"
                android:shadowRadius="30"
                android:text="@string/submit_text"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>



