<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nyork"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Interest for You:"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/brooklyn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@drawable/single_item_style"
                android:text="@string/tech"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/queens"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@drawable/single_item_style"
                android:text="@string/construction"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/bronx"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@drawable/single_item_style"
                android:text="@string/certs"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>